--- a/P2Pproject/nbproject/project.properties
+++ b/P2Pproject/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.derbyclient-10.2.2.0.jar=C:\\derbyclient-10.2.2.0.jar
+file.reference.derbyclient-10.2.2.0.jar-1=/Users/ctf/Downloads/derbyclient-10.2.2.0.jar
 file.reference.javaee-api-7.0.jar=/Users/ctf/Downloads/javaee-api-7.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.javaee-api-7.0.jar}:\
-    ${file.reference.derbyclient-10.2.2.0.jar}
+    ${file.reference.derbyclient-10.2.2.0.jar}:\
+    ${file.reference.derbyclient-10.2.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
